@@ -9,6 +9,9 @@ Fix to dropping index when no name
 Added dotplot
 Added axis tick and tick label format options
 Added plotting animation dialog
+Added abaility to label of points in scatter plots
+Fix to plot frame closing bug
+Added empty column selection for groupby option
 
 ------
 0.9.0
